<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#6577"
    tools:context="com.example.hp.musicsharer.MergeMusic">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="25dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/merge"
            android:textColor="#9646ff"
            android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:text="@string/selectfile1"
            android:background="#ffffff"
            android:id="@+id/selectfilefirst"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:text="@string/selectfile2"
            android:background="#ffffff"
            android:id="@+id/selectfilesecond"

            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="25dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/namefile"
                android:textColor="@color/design_textinput_error_color_dark"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textSize="25dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"

                android:background="#ffffff"

                android:id="@+id/filenewnameet" />
        </LinearLayout>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingRight="1dp"
        android:paddingLeft="1dp"
        android:text="@string/mergee"
        android:background="#ffffff"
        android:id="@+id/mergeexternal"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingRight="1dp"
        android:paddingLeft="1dp"
        android:text="@string/mergei"
        android:background="#ffffff"
        android:id="@+id/mergeinternal"

        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:text="check"
            android:background="#ffffff"
            android:id="@+id/checkinternalforfile"

            />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingRight="1dp"
        android:paddingLeft="1dp"
        android:text="@string/back"
        android:background="#ffffff"
        android:id="@+id/back"

        />
    </LinearLayout>
</RelativeLayout>
