<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#6577"
    tools:context="com.example.hp.musicsharer.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="25dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/username"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:textSize="25dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingRight="1dp"
        android:paddingLeft="1dp"

        android:background="#ffffff"

        android:id="@+id/munameedittext" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="25dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:background="#ffffff"

            android:id="@+id/mpassedittext" />
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingRight="1dp"
            android:paddingLeft="1dp"
            android:text="@string/login"
            android:background="#ffffff"
            android:id="@+id/loginbutton"

            />
    </LinearLayout>
</RelativeLayout>
